k8s/redirect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect-service
  namespace: urlshortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redirect-service
  template:
    metadata:
      labels:
        app: redirect-service
    spec:
      containers:
        - name: app
          image: ghcr.io/joobadam/microservice_projekt-redirect:latest
          ports:
            - containerPort: 5001
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: redirect-service
  namespace: urlshortener
spec:
  selector:
    app: redirect-service
  ports:
    - port: 5001
      targetPort: 5001
