k8s/shortener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortener-service
  namespace: urlshortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortener-service
  template:
    metadata:
      labels:
        app: shortener-service
    spec:
      containers:
        - name: app
          image: ghcr.io/joobadam/microservice_projekt-shortener:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: shortener-service
  namespace: urlshortener
spec:
  selector:
    app: shortener-service
  ports:
    - port: 5000
      targetPort: 5000
